davinci: Set rounded corner padding
Change-Id: I7e5ad87d45adcdb7ac0801db61a1c0f79b9b2064

--- a/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -26,4 +26,6 @@
 
     <!-- Margin on the left side of the carrier text on Keyguard -->
     <dimen name="keyguard_carrier_text_margin">44px</dimen>
+
+    <dimen name="rounded_corner_content_padding">10dp</dimen>
 </resources>
