--- a/overlay-arrow/packages/apps/Settings/res/values/config.xml
+++ b/overlay-arrow/packages/apps/Settings/res/values/config.xml
@@ -21,4 +21,7 @@
          3 = right side
     -->
     <integer name="config_fingerprintSensorLocation">1</integer>
+
+    <!-- FOD recognizing animation -->
+    <bool name="config_showFODAnimationSettings">true</bool>
 </resources>
