--- a/overlay-arrow/frameworks/base/core/res/res/values/arrow_config.xml
+++ b/overlay-arrow/frameworks/base/core/res/res/values/arrow_config.xml
@@ -14,4 +14,7 @@
      <!-- Does the battery LED support multiple colors?
          Used to decide if the user can change the colors -->
     <bool name="config_multiColorBatteryLed">false</bool>
+
+    <!-- Shows the required view for in-display fingerprint -->
+    <bool name="config_supportsInDisplayFingerprint">true</bool>
 </resources>
