davinci: enable custom doze package
* Remove the intent filter as we don't use it

--- a/overlay-arrow/packages/apps/Settings/res/values/config.xml
+++ b/overlay-arrow/packages/apps/Settings/res/values/config.xml
@@ -27,4 +27,7 @@
 
     <!-- FOD recognizing animation -->
     <bool name="config_showFODAnimationSettings">true</bool>
+
+    <!-- Device specific doze package -->
+    <string name="config_customDozePackage">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
 </resources>
