--- a/overlay-arrow/frameworks/base/core/res/res/values/arrow_config.xml
+++ b/overlay-arrow/frameworks/base/core/res/res/values/arrow_config.xml
@@ -22,4 +22,14 @@
     <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
     <string name="config_SmartChargingSuspendValue" translatable="false">1</string>
     <string name="config_SmartChargingResumeValue" translatable="false">0</string>
+
+    <!-- Paths to the libraries that contain device specific key handlers -->
+    <string-array name="config_deviceKeyHandlerLibs" translatable="false">
+        <item>/system/priv-app/XiaomiParts/XiaomiParts.apk</item>
+    </string-array>
+
+    <!-- Names of the key handler classes -->
+    <string-array name="config_deviceKeyHandlerClasses" translatable="false">
+        <item>org.lineageos.settings.keyhandler.KeyHandler</item>
+    </string-array>
 </resources>
