--- a/overlay-arrow/frameworks/base/core/res/res/values/arrow_config.xml
+++ b/overlay-arrow/frameworks/base/core/res/res/values/arrow_config.xml
@@ -32,4 +32,7 @@
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
         <item>org.lineageos.settings.keyhandler.KeyHandler</item>
     </string-array>
+
+    <!-- Enable face auth only when swiping security view -->
+    <bool name="config_faceAuthOnlyOnSecurityView">true</bool>
 </resources>
