--- a/overlay-arrow/packages/apps/Settings/res/values/config.xml
+++ b/overlay-arrow/packages/apps/Settings/res/values/config.xml
@@ -24,4 +24,7 @@
 
     <!-- FOD recognizing animation -->
     <bool name="config_showFODAnimationSettings">true</bool>
+
+    <!-- Screen off FOD -->
+    <bool name="config_supportScreenOffFod">true</bool>
 </resources>
