--- a/overlay-arrow/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-arrow/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -20,4 +20,9 @@
 
     <!-- Color of the FOD view -->
     <color name="config_fodColor">#00ffffff</color>
+
+    <!-- Whether to enable shifting of elements in the status bar and the navigation bar.
+         Should be enabled for OLED devices to reduce/prevent burn in on the status bar
+         and on the navigation bar and disabled for all other devices. -->
+    <bool name="config_statusBarBurnInProtection">true</bool>
 </resources>
